* vm.c (vm_exec): support :b_return event for "lambda{return}.call".   [Bug #8622] * test/ruby/test_settracefunc.rb: add a test.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@43237 b2dd03c8-39d4-4d8f-98ff-823fe69b080e